<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_namaUniv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppinsbold"
            android:paddingStart="10dp"
            android:text="@string/nama_universitas"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_universitas"
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:src="@drawable/ui" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_text"
                    android:fontFamily="@font/poppinsmedium"
                    android:paddingStart="10dp"
                    android:text="@string/akreditasi"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppinsregular"
                    android:text="A" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_text"
                    android:fontFamily="@font/poppinsmedium"
                    android:paddingStart="10dp"
                    android:text="@string/alamat"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/alamat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_text"
                    android:fontFamily="@font/poppinsmedium"
                    android:paddingStart="10dp"
                    android:text="@string/telephon"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_nomor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/telephon" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:justificationMode="inter_word"
            android:text="@string/detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppinsbold"
            android:paddingStart="10dp"
            android:text="@string/fakultas_dan_jurusan"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fakultas_ilmu_komputer"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="16sp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sistem_informasi"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ilmu_komputer"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Teknik Informatika"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="12sp"/>

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fakultas_kedokteran"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="16sp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gizi"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kedokteran"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="12sp"/>

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_set_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_text"
                android:text="@string/favorite"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_text"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/share"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>



</ScrollView>